eww update fixes and weather icon spacing

--- a/eww/desktopwidgets/eww.scss
+++ b/eww/desktopwidgets/eww.scss
@@ -194,7 +194,7 @@ $ispixelstyle: false;
 	font-family: Iosevka Nerd Font;
 	font-weight : normal;
 	margin-right: 0.4rem;
-	padding: 0 10px 0 3px;
+	padding: 0 3px 0 4px;
 	margin-bottom: 0px;
 	background-color: $darkdesktopcolor;
 	border-radius: 0.3rem;
@@ -563,7 +563,7 @@ tooltip {
 	color: $controllercolor;
 	
 	font-size: 18px;
-	padding: 1px 0 0 0px;
+	padding: 2px 0 0 0px;
 }
 
 .controllericon {
